// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getParts > should handle multiple search and replace markers 1`] = `
[
  {
    "content": "first change:
      ",
    "type": "text",
  },
  {
    "content": "<<<<<<< SEARCH
      const a = 1;
      =======
      const a = 2;
      >>>>>>> REPLACE",
    "language": "diff",
    "type": "code",
  },
  {
    "content": "
    second change:
      ",
    "type": "text",
  },
  {
    "content": "<<<<<<< SEARCH
      let b = 3;
      =======
      let b = 4;
      >>>>>>> REPLACE",
    "language": "diff",
    "type": "code",
  },
]
`;

exports[`getParts > should handle multiple search and replace markers2 1`] = `
[
  {
    "content": "first change:
      ",
    "type": "text",
  },
  {
    "content": "<<<<<<< SEARCH
      const a = 1;
      =======
      const a = 2;
      >>>>>>> REPLACE",
    "language": "diff",
    "type": "code",
  },
  {
    "content": "
    second change:
      ",
    "type": "text",
  },
  {
    "content": "<<<<<<< SEARCH
      let b = 3;
      =======
      let b =
    >>>>>>> REPLACE",
    "language": "diff",
    "type": "code",
  },
]
`;
